# esp-idf-starter

./: .clang-format  .clangd  .clineignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  fix_compile_commands.py  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
components/components_example/: CMakeLists.txt  components_example.cpp
components/components_example/include/: components_example.h
extras/: partitions-16mb.csv  partitions-4mb.csv  partitions-8mb.csv  sdkconfig.defaults.debug  sdkconfig.defaults.release
main/: CMakeLists.txt  idf_component.yml  main.cpp
tools/clangd-templates/docker/: .clangd
tools/clangd-templates/linux/: .clangd
tools/clangd-templates/linux/.zed/: settings.json
tools/clangd-templates/macos/: .clangd
tools/clangd-templates/windows/: .clangd
tools/clangd-templates/windows/.zed/: settings.json
tools/docker/.devcontainer/: Dockerfile  devcontainer.json
